--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,21 +1,21 @@
 @charset "utf-8";
-@import "~bulma/bulma";
+@import '~bulma/bulma';
 
 /* Core variables */
-@import "base/vars";
+@import 'base/vars';
 
 /* CSS Reset */
-@import "base/reset";
+@import 'base/reset';
 
 /* Fonts */
-@import "base/fonts";
+@import 'base/fonts';
 
 /* Mixins, helpers and functions */
-@import "base/mixins";
+@import 'base/mixins';
 
 html {
-  font-family: laca, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: laca, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background: $background;
   font-size: 10px;
 }
@@ -30,7 +30,7 @@ html {
 }
 
 .book:before {
-  content: "";
+  content: '';
   width: 30px;
   height: 100%;
   background: #0e0e0e;
@@ -41,7 +41,7 @@ html {
 }
 
 .book:after {
-  content: "";
+  content: '';
   width: 106%;
   height: 30px;
   background: #ccc;
@@ -62,7 +62,7 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  font-size: 0.9rem;
+  font-size: 2rem;
   border-left: 30px solid #131313;
   transform: rotate(-10deg) skewX(5deg) scale(0.8);
   box-shadow: -50px 50px 50px rgba(0, 0, 0, 0.5);
@@ -71,12 +71,19 @@ html {
 .box {
   display: flex;
   justify-content: center;
+  width: 50vw;
 }
 
 .book-title {
   font-weight: 600;
+  font-size: 3em;
 }
 
 .description {
   font-weight: 100;
+  font-size: 2em;
+}
+
+.copyright {
+  font-size: 0.7em;
 }
